// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages componenet renders the UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`Messages componenet renders the UI as expecteed 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`renders the UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`renders the UI as expecteed 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;
